# apilens

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SETUP_COMPLETE.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml  workflow.yml
backend/: .env.example  pyproject.toml  vercel.json
backend/api/: router.py
backend/api/apps/: router.py  schemas.py
backend/api/auth/: auth0.py
backend/api/endpoints/: router.py  schemas.py
backend/api/ingest/: schemas.py
backend/api/middleware/: tenant.py
backend/api/users/: router.py  schemas.py
backend/api/v1/: router.py
backend/api/webhooks/: __init__.py  router.py  schemas.py
backend/apps/auth/: admin.py  managers.py  models.py  services.py  validator.py
backend/apps/auth/migrations/: 0001_initial.py  0002_initial.py  0003_apikey_user_to_app.py  0005_apikey_app.py  0006_migrate_apikeys_to_apps.py  0007_apikey_remove_user_make_app_required.py
backend/apps/endpoints/: admin.py  managers.py  models.py  services.py
backend/apps/endpoints/migrations/: 0001_initial.py
backend/apps/projects/: admin.py  managers.py  models.py  services.py
backend/apps/projects/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  models.py  services.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: celery.py  settings.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  settings.py
backend/core/auth/: __init__.py  authentication.py  context.py  jwt.py
backend/core/database/: models.py
backend/core/database/clickhouse/: client.py
backend/core/database/clickhouse/migrations/: 002_api_requests.sql  003_request_response_payloads.sql  __init__.py
docs/: docs.json  styles.css  welcome.mdx
docs/api-reference/: authentication.mdx  introduction.mdx  logs.mdx  metrics.mdx  traces.mdx
docs/customer/: create-your-first-app.mdx  introduction.mdx  monitor-endpoints-and-logs.mdx  sign-in-and-access.mdx  troubleshooting.mdx
docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
docs/guides/: collecting-logs.mdx  creating-dashboards.mdx  distributed-tracing.mdx  sending-metrics.mdx
docs/ingest/: ingest-api.mdx  request-schema.mdx
docs/releases/: alpha-1-launch.mdx
docs/sdk/: building-an-sdk.mdx  python-setup.mdx
docs/self-hosting/: configuration.mdx  docker-compose.mdx  production-deployment.mdx  requirements.mdx
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  vite-env.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/account/identities/: route.ts
frontend/src/app/api/account/profile/: route.ts
frontend/src/app/api/account/unlink/: route.ts
frontend/src/app/api/apps/: route.ts
frontend/src/app/apps/: AppsListContent.tsx
frontend/src/app/apps/[slug]/analytics/: page.tsx
frontend/src/app/apps/[slug]/endpoints/: page.tsx
frontend/src/app/apps/[slug]/endpoints/details/: EndpointDetailsContent.tsx
frontend/src/app/apps/[slug]/monitors/: page.tsx
frontend/src/app/apps/[slug]/settings/: page.tsx
frontend/src/app/apps/[slug]/setup/: SetupContent.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/apps/: AppApiKeysSection.tsx  AppCard.tsx  AppGeneralSection.tsx  AppSettingsPage.tsx  AppSettingsSidebar.tsx  AppSetupGuide.tsx  CreateAppForm.tsx
frontend/src/components/auth/: index.ts  protected-route.tsx  user-menu.tsx
frontend/src/components/dashboard/: AccountLayout.tsx  Breadcrumbs.tsx  DashboardContent.tsx  DashboardLayout.tsx  Navbar.tsx  Sidebar.tsx  index.ts
frontend/src/components/providers/: AppProvider.tsx  ThemeProvider.tsx  auth-provider.tsx
frontend/src/components/settings/: AccountSection.tsx  ConnectedAccountsSection.tsx  ProfilePictureEditor.tsx  ProfileSection.tsx  ProviderIcon.tsx  SettingsPage.tsx  SettingsSidebar.tsx  index.ts
frontend/src/components/ui/: button.tsx  card.tsx  index.ts  input.tsx
frontend/src/lib/: api-client.ts  proxy.ts  session.ts
frontend/src/pages/: Home.tsx
frontend/src/types/: app.ts  settings.ts
infrastructure/docker/: backend.Dockerfile  frontend.Dockerfile
infrastructure/docker/nginx/: frontend.conf  nginx.conf
infrastructure/systemd/: itsfriday.service  observex.service
scripts/: build.sh  deploy-vm.sh  install-deps.sh  quickstart.sh  setup-dev.sh  setup.sh  test.sh
sdks/: README.md
sdks/js/: CHANGELOG.md  LICENSE  README.md  package.json  tsconfig.json  tsup.config.ts
sdks/js/src/: client.ts  express.ts  index.ts  types.ts  utils.ts
sdks/js/tests/: client.test.ts  express.e2e.test.ts
sdks/python/: README.md  pyproject.toml
sdks/python/apilens/: __init__.py  blacksheep.py  django.py  fastapi.py  flask.py  litestar.py  starlette.py
sdks/python/apilens/client/: __init__.py  _capture.py  client.py  middleware.py  models.py  otel.py
sdks/python/apilens/frameworks/: __init__.py  fastapi.py  flask.py
sdks/python/apilenss/: blacksheep.py
sdks/python/src/apilens/: __init__.py  client.py  exceptions.py  models.py  transport.py
sdks/python/src/apilens/middleware/: __init__.py  django.py  fastapi.py  flask.py
sdks/python/tests/: test_client.py
sidecar-testing/: README.md
sidecar-testing/django-ninja/: .env.example  README.md  manage.py  requirements.txt
sidecar-testing/django-ninja/project/: api.py  settings.py
sidecar-testing/fastapi/: .env.example  README.md  requirements.txt
sidecar-testing/fastapi/app/: main.py
sidecar-testing/flask/: .env.example  README.md  requirements.txt
sidecar-testing/flask/app/: main.py
src/api/v1/: router.py  views.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  development.py  production.py
src/core/database/: models.py
src/core/database/clickhouse/: client.py  migrate.py
src/core/database/clickhouse/migrations/: 001_initial_schema.sql
static/: package.json
(+1 files in other folders)
