[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apilens"
version = "0.1.0"
description = "Python SDK for APILens - API Observability Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "APILens Contributors" }
]
keywords = ["api", "observability", "monitoring", "metrics", "tracing", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
django = ["django>=4.0"]
fastapi = ["fastapi>=0.100.0", "starlette>=0.27.0"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
    "ruff>=0.1",
    "mypy>=1.0",
]
all = ["apilens[django,fastapi,flask,dev]"]

[project.urls]
Homepage = "https://github.com/apilens/apilens"
Documentation = "https://docs.apilens.ai"
Repository = "https://github.com/apilens/apilens"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/apilens"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
